Plan desktop esta listo (A exepcion de la especialidad)

--- a/TP02/TP2L05/Windows/ABMListForms/Comisiones.resx
+++ b/TP02/TP2L05/Windows/ABMListForms/Comisiones.resx
@@ -559,4 +559,7 @@
         QY1l7kERwWuNEdTYMygyKNbIoDitMwoYQY09g2KpQfH7/f8BjtfAzndd06sAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
